--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,1 +1,1 @@
-<img src="../assets/images/wine.jpg" class="img-fluid rounded" height="50%">
+<img src="../assets/images/wine.jpg" class="img-fluid rounded">
