--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,3 +1,18 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <a class="navbar-brand">Wine</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="wine">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="wine/add">Add Wine</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link mr-right" routerLink="about">About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
