--- a/src/app/wine/wine-list/wine-list.component.html
+++ b/src/app/wine/wine-list/wine-list.component.html
@@ -1,3 +1,15 @@
-<p>
-  wine-list works!
-</p>
+<div class="row">
+	<div class="col">
+		<app-search></app-search>
+	</div>
+</div>
+<div class="row">
+	<div class="col">
+		<app-table></app-table>
+	</div>
+</div>
+<div class="row">
+	<div class="col">
+		<app-pagination></app-pagination>
+	</div>
+</div>
