--- a/src/app/wine/wine-list/wine-list.component.html
+++ b/src/app/wine/wine-list/wine-list.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
 	<div class="col">
-		<app-table></app-table>
+		<app-table [wine]="wineList" (sendInfo)="refresh()"></app-table>
 	</div>
 </div>
 <div class="row">
