--- a/src/app/wine/about/about.component.html
+++ b/src/app/wine/about/about.component.html
@@ -1,3 +1,14 @@
 <p>
-  about works!
+ Vino je tečnost koja život znači. Vinoljupci su srećni ljudi. Vino ima mnogo lica. Nema opšte kulture bez vinske kulture. Poznavanje vina podstiče vinske razgovore, proširuje vokabular i daje samopouzdanje. Znanjem se postaje zastupnik dobrog vina. Zato je važno interpretirati tehniku degustacije vina kako bi se dobro vino prepoznalo i zavolelo. Koliko vino razumemo, toliko ga i cenimo. Ako razumemo vino, nikad nećemo reći: „Sva su vina jednaka“.
+<br>
+Ispijanje vina nije instinktivno gašenje žeđi, već čisto uživanje. U vinu valja otkriti arome i ukuse prirode. Valja piti pažljivo i umereno, s poštovanjem i ljubavlju. Odnos prema vinu mnogo govori o samopoštovanju i o razumevanju samog sebe. Pokaži mi šta i kako piješ, i reći ću ti ko si! Vinoljupci bi rekli: „Vino je najbolji čovekov prijatelj“.
+<br>
+Kvalitetna, dobra vina rezultat su umeća, strpljivosti i teškog rada vinogradara i vinara. Napredak je u poslednje vreme čudesan. Sve je više vinoljubaca koji su sposobni da prepoznaju izvrsnost vina. Poznavanje vina je u velikoj meri postalo deo opšte kulture.
+Dobro vino podstiče umerenost. Svaka boca lošeg vina kompromituje reputaciju dobrog vina uopšte. Život je prekratak da bismo pili loše vino!
+<br>
+Zato, živeli!
+<br>
+Kaže se da o ukusima ne vredi raspravljati. Vinski ukusi su stvarno raznoliki. Mnogi ljudi imaju isključiv ukus. Ono što vole, vole. Ono što ne vole, ne mogu ni smisliti. Njima je zaista teško kupiti vino samo na osnovu onoga što piše na etiketi boce. Nemoguće je iz etikete zaključiti kakvo je vino u boci, kakva je bila godina, koliko je bilo sunca, kako je vinar pravio vino. U boljim vinarijama u velikim gradovima naći će se više od hiljadu vina iz dvadesetak zemalja. Zato, ljudi koji piju vino moraju da poseduju nešto vinskog znanja, da Izoštre čula, da se usredsrede na vino koje upravo piju i da se nadaju da će im ukus tokom godina ispijanja vina postati istančan. Upoznati vino mnogo je teže nego upoznati bilo koji drugi prehrambeni proizvod ili dar prirode. Uz to, valja osluškivati i reakciju tela. Prekomernu ili neodgovarajuću upotrebu hemije u proizvodnji grožđa i potom vina teško je uočiti čulima. Negativni efekti osete se narednog dana.
+<br>
+Industrijska proizvodnja vina naglo jača u zemljama u kojima se pre koju deceniju proizvodilo samo stono grožđe. Raznolikost vina se ubrzano povećava. Sve više potrošača spremno je da prihvati rizik kupovine nepoznatih vina, naročito ako im je cena niska. Kvalitetna vina više nisu rezervisana samo za društvenu i finansijsku elitu. Vino je postalo masovni industrijski proizvod. Na terenima na kojima nije moguća masovna primena mehanizacije teško je proizvesti vino koje će biti konkurentno. Na sreću, male su i proizvedene količine, pa se takva vina popiju tamo gde su i proizvedena. Srećna okolnost je i to što je potražnja za ekološkim, zdravim vinima sve veća, jer je u malim vinogradima lakše održati ekološke standarde.
 </p>
