--- a/src/app/wine/wine-list/wine-list.component.html
+++ b/src/app/wine/wine-list/wine-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col">
-		<app-search></app-search>
+		<app-search (search)="searchByName($event)"></app-search>
 	</div>
 </div>
 <div class="row">
